--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Balthazar Donon, PhD"
-  avatar           : "0035_-_Plan_LinkedIn_-_HD.JPG"
+  avatar           : "profile.jpg"
   bio              : "Postdoctoral Researcher @ Institut Montefiore & RTE"
   location         : "Paris - Liège"
   employer         :
