--- a/_config.yml
+++ b/_config.yml
@@ -87,7 +87,7 @@ author:
   employer         :
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=7l4-5PEAAAAJ&hl=fr&oi=ao"
-  email            : "balthazar.donon@uliege.be
+  email            : "balthazar.donon@uliege.be"
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
   uri              :
   bitbucket        :
